--- a/Demos/ReactDemo/ReactDemo.csproj
+++ b/Demos/ReactDemo/ReactDemo.csproj
@@ -8,7 +8,7 @@
 		<RuntimeIdentifiers>win7-x86;win7-x64;linux-x64</RuntimeIdentifiers>
 		<Configurations>Debug;Release;ReleaseLinux;DebugLinux</Configurations>
 		<Platforms>x64</Platforms>
-    <AssemblyName>chromely_react</AssemblyName>
+    <AssemblyName>chromatron_react</AssemblyName>
 	</PropertyGroup>
 	
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,7 +29,6 @@
     </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Chromely" Version="5.1.86" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
